ILA-SCNN: tidy up

--- a/tensorflow/core/user_ops/BUILD
+++ b/tensorflow/core/user_ops/BUILD
@@ -22,6 +22,7 @@ tf_custom_op_library(
               "direct_sparse_to_dense.cc",
               "evaluate_confusion_matrix.cc",
               "direct_sparse_cwise_biased_reg.cc",
+              "direct_sparse_concat.cc",
             ],
 
     gpu_srcs = [
@@ -36,6 +37,8 @@ tf_custom_op_library(
               "direct_sparse_to_dense_gpu.cu.cc",
               "direct_sparse_cwise_biased_reg_gpu.h",
               "direct_sparse_cwise_biased_reg_gpu.cu.cc",
+              "direct_sparse_concat_gpu.h",
+              "direct_sparse_concat_gpu.cu.cc",
     ],
 
     deps = [
